@@ -31,6 +31,7 @@ Cacti CHANGELOG
 -issue#5187: Getting SQL errors in the Cacti due to plugin calling register function in wrong location
 -issue#5188: Device Template Filter broken
 -issue#5190: When using Gradient Support GPRINT Text Format is misaligned
+-issue#5195: Spikekill Backtrace Argument #1 ($string) must be passed by reference, value given
 
 1.2.23
 -security#4920: Add .htaccess file to scripts folder
